i18n/zh-Hant/docusaurus-plugin-content-docs/version-0.2.0/operations/commit.md
---
sidebar_position: 3
---

# 提交更改

創建提交，查看歷史記錄，並管理倉庫狀態。

## 快捷鍵

### 提交輸入

| 按鍵        | 動作             |
| :---------- | :--------------- |
| `c`         | 提交             |
| `A`         | 修正提交 (Amend) |
| `ctrl+e`    | 提交             |
| `esc`       | 取消             |
| `tab`       | 下一個欄位       |
| `shift+tab` | 上一個欄位       |

### 提交日誌與重置

| 按鍵    | 動作           |
| :------ | :------------- |
| `r`     | 重置選定的提交 |
| `R`     | 重置最新提交   |
| `enter` | 查看詳情       |

## 工作流

### 創建提交

1.  **暫存**: 確保您已在 **修改的檔案** 面板中暫存了檔案。
2.  **觸發**: 按 `c`。
3.  **彈窗**: **提交彈窗** 出現，包含兩個欄位：
    - **摘要**: 提交訊息的第一行。
    - **描述**: 提交訊息的詳細正文。
4.  **輸入**:
    - 輸入您的摘要。
    - 按 `tab` 移動到描述（可選）。
5.  **提交**: 按 `ctrl+e`。
    - **為什麼是 `ctrl+e`?**: 因為 `enter` 用於在描述欄位中換行，所以使用 `ctrl+e` 來提交表單。

---

### 修正提交 (Amend)

1.  **觸發**: 按 `A` (shift+a)。
2.  **彈窗**: **修正提交彈窗** 打開，預先填充了*上一次*提交的訊息。
3.  **修改**: 編輯訊息或直接提交以包含新暫存的檔案。
4.  **提交**: 按 `ctrl+e`。

---

### 查看提交歷史

1.  **導航**: 按 `3` 聚焦 **提交日誌**。
2.  **圖表**: 清單顯示可視化的分支圖和提交摘要。
3.  **詳情**: **詳細面板** (右側) 顯示完整的提交資訊，包括：
    - 作者、日期、雜湊
    - 完整訊息
    - 統計摘要 (插入/刪除)
    - **差異**: 該提交的完整檔案變更。

---

### 重置提交

使用 `soft`、`mixed` 或 `hard` 重置來優化您的歷史記錄。

#### 重置最新提交

1.  **觸發**: 在提交日誌中按 `R` (shift+r)。
2.  **選擇模式**:
    - **Soft**: 保留變更在暫存區。
    - **Mixed**: 保留變更在工作目錄（未暫存）。
    - **Hard**: 丟棄所有變更。
3.  **確認**: 提示確認是否繼續。

#### 重置到特定提交

1.  **選擇**: 在日誌中高亮顯示目標提交。
2.  **觸發**: 按 `r`。
3.  **選擇模式**: 選擇針對該提交的 Soft、Mixed 或 Hard 重置。
4.  **確認**: 繼續重置。
